added dev/application/config/config.php to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ jillbee_ci/documentation
 jillbee_ci/user_guide
 jillbee_dev/documentation
 jillbee_dev/user_guide
+jillbee_dev/application/config/config.php
