Removed config.php and database.php under application/config and added them to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ jillbee_ci/user_guide
 jillbee_dev/documentation
 jillbee_dev/user_guide
 jillbee_dev/application/config/config.php
+jillbee_dev/application/config/database.php
 .gitconfig
